# ChangeLog for vmware overlay
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  06 Jan 2009; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-modules/vmware-modules-1.0.0.15-r2.ebuild:
  Fix up typo with kernel_is in vmware-modules-1.0.0.15.

  06 Jan 2009; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-modules/vmware-modules-1.0.0.15-r2.ebuild:
  Ensure we check for UNUSED_SYMBOLS in vmware-modules-1.0.0.15-r2.

  04 Jan 2009; Mike Auty <ikelos@gentoo.org>
  -app-emulation/vmware-modules/files/1.0.0.22-makefile-kernel-dir.patch,
  +app-emulation/vmware-modules/files/patches/vmnet/030_all_kernel-2.6.27.pa
  tch,
  +app-emulation/vmware-modules/files/patches/vmmon/040_all_kernel-2.6.27.pa
  tch:
  Update vmware-modules-1.0.0.15, and remove the no-longer-necessary
  1.0.0.22.

  31 Dec 2008; Mike Auty <ikelos@gentoo.org> -x11-libs/libview/metadata.xml,
  -x11-libs/libview/files/libview-0.5.6-pcfix.patch:
  Remove libview since it's now in the main tree.

  31 Dec 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-workstation/files/helpers/vmware-config.sh:
  Remove debugging statement from vmware-config.sh

  31 Dec 2008; Mike Auty <ikelos@gentoo.org>
  -app-emulation/open-vm-tools/open-vm-tools-0.0.20080414.87182.ebuild,
  -app-emulation/open-vm-tools/open-vm-tools-0.0.20080515.93241.ebuild,
  -app-emulation/open-vm-tools/open-vm-tools-0.0.20080701.102166.ebuild,
  -app-emulation/open-vm-tools/open-vm-tools-0.0.20080808.109361.ebuild,
  -app-emulation/open-vm-tools/open-vm-tools-0.0.20081010.123053.ebuild,
  +app-emulation/open-vm-tools/open-vm-tools-0.0.20081223.137496.ebuild:
  Update open-vm-tools to the latest version in the tree, clean out the
  cruft.

  20 Dec 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-server/files/vmware-server-2.rc:
  Add hald requirement to vmware-server-2 initscript.

  28 Nov 2008; Mike Auty <ikelos@gentoo.org>