@@ -23,4 +23,4 @@ DIST VMware-Workstation-6.5.1-126130.x86_64.bundle 361697489 RMD160 30762c062ef2
 DIST VMware-workstation-5.5.9-126128.tar.gz 111649803 RMD160 a5a867761d36c9a02821f8dd639a95b8c9ab38bc SHA1 eb8786111a74213ea4ec24636a4ba70b7f5dc741 SHA256 71a062e29480a48647c7323883e4e4b43a9365c1bb70000a23b768647db46444
 DIST vmware-any-any-update115.tar.gz 493641 RMD160 56cabe56f70c01a22a7671e861cc5a2df19855c7 SHA1 ff9b6fdf6ca74495eb5f4822a1854fc91185377c SHA256 b1c14fa9514663b85c2efe8331407e71cce96e5a21a8b941fa570c960bbdcaa1
 EBUILD vmware-workstation-5.5.9.126128.ebuild 3247 RMD160 a619054c3c4318362f30e6ca10047b54c0dd6f6a SHA1 053e1cfd70208934063fbaab49581f7907381b5f SHA256 6470238fc76ab279dfb01ee2b13a4d32ff29d4f96aa9c5d094a09a786de4a214
-EBUILD vmware-workstation-6.5.1.126130.ebuild 5517 RMD160 37051cbefa944a97b93096bed4167d0bd9066def SHA1 1262fb8bec1407de073dc807d7b096e3e78fa943 SHA256 184ad6152b5297ccf22629606e3ee8ce762de6a7eafe77950e7bb1c0efa6a245
+EBUILD vmware-workstation-6.5.1.126130.ebuild 5530 RMD160 101638bc4e3b0defca8028088e5e575770e34451 SHA1 f413e2ddb2dcbb2d7a907160dda46b3f879900c3 SHA256 73894185ac3ac8fb4a3aa4475476b59e23b15cbf58f1c427fd14fd3281b808f5
